newsletter width modified(no longer overflowing)

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -256,7 +256,6 @@
   justify-content: center;
   flex-wrap: wrap;
   flex-direction: column;
-  width: 400px;
   height: 310px;
   border-radius: 16px;
   background-color: #0B111C;
